@@ -1,3 +1,12 @@
+2007-12-18  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
+
+	* generic/regguts.h, generic/regc_color.c, generic/regc_nfa.c:
+	Fixes for problems created when processing regular expressions that
+	generate very large automata. An enormous number of thanks to Will
+	Drewry <wad@google.com>, Tavis Ormandy <taviso@google.com>, and Tom
+	Lane <tgl@sss.pgh.pa.us> from the Postgresql crowd for their help in
+	tracking these problems down. [Bug 1810264]
+
 2007-12-17  Don Porter	<dgp@users.sourceforge.net>
 
 	*** 8.5.0 TAGGED FOR RELEASE ***
